2025-03-17 cloud 환경 배포용 설정 8 - 포트 8000 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ spring:
       on-profile: prod
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${SPRING_DATABASE_URL} #  todo cloud run 배포 부분 바꾸기 jdbc:postgresql://${SPRING_DATABASE_HOST}/${SPRING_DATABASE_NAME}
+    url: jdbc:postgresql://${SPRING_DATABASE_HOST}/${SPRING_DATABASE_NAME} # todo cloud run 배포 부분 바꾸기
     username: ${SPRING_DATABASE_USERNAME}
     password: ${SPRING_DATABASE_PASSWORD}
   jpa:
